--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # Site Settings
 title: Telar
 description: "Telar (Spanish for 'loom') is a static site generator built on Jekyll that weaves together IIIF images, text, and layered contextual information into interactive digital narrative exhibitions. Telar is developed by Adelaida Ávila, Juan Cobo Betancourt, Santiago Muñoz, and students and scholars at the UCSB and UT Archives, Memory, and Preservation Labs."
-baseurl: "/telar"
+baseurl: "/kazakhwomen"
 url: "https://happyayka.github.io"
 author: ""
 email: ""
