--- a/_config.yml
+++ b/_config.yml
@@ -2,12 +2,12 @@
 # https://github.com/UCSB-AMPLab/telar
 
 # Site Settings
-title: Telar
-description: "Telar (Spanish for 'loom') is a static site generator built on Jekyll that weaves together IIIF images, text, and layered contextual information into interactive digital narrative exhibitions. Telar is developed by Adelaida Ávila, Juan Cobo Betancourt, Santiago Muñoz, and students and scholars at the UCSB and UT Archives, Memory, and Preservation Labs."
+title: women's equality
+description: "this is about discourse on women's equality and education."
 baseurl: "/kazakhwomen"
 url: "https://happy-ayka.github.io"
-author: ""
-email: ""
+author: "aigerim"
+email: "aigerim@ucsb.edu"
 
 # Build Settings
 markdown: kramdown
