Update _config.yml title and description

--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 # https://github.com/UCSB-AMPLab/telar
 
 # Site Settings
-title: Telar
-description: "static site"
+title: History of Kazakh Women
+description: "This project tells how kazakh female intellectuals envisioned equality in the early 20th century."
 baseurl: "/kazakhwomen"
 url: "https://happy-ayka.github.io"
 author: "aigerim"
