--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,8 +4,6 @@ on:
   push:
     branches: [main]
   workflow_dispatch:  # Allow manual trigger
-  schedule:
-    - cron: '0 0 * * *'  # Daily at midnight (optional, for auto-updates from Google Sheets)
 
 permissions:
   contents: write
@@ -36,28 +34,17 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      # Google Sheets integration - commented out for now, using committed data files
-      # Uncomment and configure GOOGLE_SHEETS_URL secret when ready to use
-      # - name: Fetch data from Google Sheets
-      #   env:
-      #     GOOGLE_SHEETS_URL: ${{ secrets.GOOGLE_SHEETS_URL }}
-      #   if: ${{ env.GOOGLE_SHEETS_URL != '' }}
-      #   run: |
-      #     # Create data directory if it doesn't exist
-      #     mkdir -p _data
-      #
-      #     # Fetch Project Setup (tab 2)
-      #     curl -L "${GOOGLE_SHEETS_URL}&gid=PROJECT_SETUP_GID&output=csv" -o _data/project.csv
-      #
-      #     # Fetch Objects (tab 3)
-      #     curl -L "${GOOGLE_SHEETS_URL}&gid=OBJECTS_GID&output=csv" -o _data/objects.csv
-      #
-      #     # Fetch Glossary (tab 4)
-      #     curl -L "${GOOGLE_SHEETS_URL}&gid=GLOSSARY_GID&output=csv" -o _data/glossary.csv
-      #
-      #     # Fetch Chapter tabs (tab 5+)
-      #     # Note: You'll need to add GIDs for each chapter tab
-      #     # curl -L "${GOOGLE_SHEETS_URL}&gid=CHAPTER_1_GID&output=csv" -o _data/chapter-1.csv
+      - name: Fetch data from Google Sheets (if enabled)
+        run: |
+          # Check if Google Sheets integration is enabled in _config.yml
+          ENABLED=$(python3 -c "import yaml; config=yaml.safe_load(open('_config.yml')); print(config.get('google_sheets', {}).get('enabled', False))")
+
+          if [ "$ENABLED" = "True" ]; then
+            echo "✓ Google Sheets integration enabled - fetching CSVs..."
+            python3 scripts/fetch_google_sheets.py
+          else
+            echo "✓ Google Sheets integration disabled - using existing CSV files"
+          fi
 
       - name: Convert CSV to JSON
         run: |
@@ -98,20 +85,3 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-
-      - name: Commit generated files
-        if: github.event_name != 'pull_request'
-        run: |
-          git config --local user.email "github-actions[bot]@users.noreply.github.com"
-          git config --local user.name "github-actions[bot]"
-          # Only add files that exist
-          git add _data/*.json 2>/dev/null || true
-          git add _jekyll-files/ 2>/dev/null || true
-          git add iiif/ 2>/dev/null || true
-          # Only commit and push if there are changes
-          if ! git diff --quiet || ! git diff --staged --quiet; then
-            git commit -m "Update data and IIIF tiles"
-            git push
-          else
-            echo "No changes to commit"
-          fi
