--- a/.github/workflows/upgrade.yml
+++ b/.github/workflows/upgrade.yml
@@ -86,6 +86,10 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
           BRANCH_NAME="upgrade-telar-${{ steps.upgrade.outputs.version }}"
+
+          # Delete remote branch if it exists
+          git push origin --delete "$BRANCH_NAME" 2>/dev/null || true
+
           git checkout -b "$BRANCH_NAME"
           git add .
           git commit -m "Upgrade Telar from ${{ steps.check_version.outputs.current_version }} to ${{ steps.upgrade.outputs.version }}"
@@ -99,69 +103,104 @@ jobs:
         env:
           GH_TOKEN: ${{ github.token }}
         run: |
-          # Read the upgrade summary
-          SUMMARY=$(cat UPGRADE_SUMMARY.md)
-
           # Get repository info
           REPO="${{ github.repository }}"
           BRANCH="${{ steps.create_branch.outputs.branch_name }}"
           VERSION="${{ steps.upgrade.outputs.version }}"
           FROM_VERSION="${{ steps.check_version.outputs.current_version }}"
+          COMPARE_URL="https://github.com/$REPO/compare/main...$BRANCH"
 
-          # Create issue body with instructions
-          cat > issue_body.md << 'EOF'
-          ## 🎉 Telar Upgrade Ready
+          # Strip YAML frontmatter from UPGRADE_SUMMARY.md (remove everything between first --- and second ---)
+          SUMMARY_CONTENT=$(sed '/^---$/,/^---$/d' UPGRADE_SUMMARY.md)
 
-          Your Telar site has been successfully upgraded from **$FROM_VERSION** to **$VERSION**.
+          # Extract automated changes and manual steps counts from the summary
+          AUTOMATED_CHANGES=$(grep -o '\*\*Automated changes:\*\* [0-9]\+' UPGRADE_SUMMARY.md | sed 's/.*\*\* \([0-9]\+\)/\1/')
+          MANUAL_STEPS=$(grep -o '\*\*Manual steps:\*\* [0-9]\+' UPGRADE_SUMMARY.md | sed 's/.*\*\* \([0-9]\+\)/\1/')
 
-          ### 📋 Upgrade Summary
+          # Extract manual steps from UPGRADE_SUMMARY.md (if any)
+          MANUAL_STEPS_TEXT=$(sed -n '/## Manual Steps Required/,/## Resources/p' UPGRADE_SUMMARY.md | sed '1d;$d' | sed '/^Please complete these after merging:/d' | sed '/^$/d')
 
-          $SUMMARY
+          # Create issue body directly with variable expansion
+          cat > issue_body.md << EOF
+          ## Upgrade Ready: v$FROM_VERSION → v$VERSION
 
-          ### 🔍 Review Changes
+          **Status:** ✅ Automated upgrade complete
+          **Branch:** \`$BRANCH\`
+          **Changes:** $AUTOMATED_CHANGES automated, $MANUAL_STEPS manual
 
-          View all changes in the upgrade branch:
-          - **[Compare view]($COMPARE_URL)** - See exactly what changed
-          - **Branch:** `$BRANCH`
+          ---
 
-          ### ✅ How to Apply This Upgrade
+          ## Next Step: Review and Merge
 
-          Choose one of the following methods:
+          Your Telar site has been successfully upgraded and is ready to merge.
 
-          #### Option 1: Create Pull Request (Recommended)
-          1. Go to the [compare view]($COMPARE_URL)
-          2. Click the green **"Create pull request"** button
-          3. Review the changes one more time
-          4. Click **"Merge pull request"** to apply the upgrade
+          ### **[Click here to review changes and create pull request]($COMPARE_URL)**
 
-          #### Option 2: Merge via Command Line
-          ```bash
+          Then click the green "Create pull request" button, review the changes, and merge to complete the upgrade.
+
+          <details>
+          <summary><b>For users who prefer the command line</b> (click to expand)</summary>
+
+          If you prefer working from your terminal:
+
+          \`\`\`bash
           git fetch origin
           git checkout main
           git merge origin/$BRANCH
           git push origin main
-          ```
+          \`\`\`
 
-          #### Option 3: Merge on GitHub
-          1. Go to your repository's **Branches** page
-          2. Find the `$BRANCH` branch
-          3. Click **"New pull request"** or use the merge button
+          This will merge the upgrade branch into your main branch. We recommend using the pull request method above instead, as it provides a better review interface.
 
-          ### 📝 Manual Steps
-
-          After merging, please check the upgrade summary above for any manual steps you may need to complete.
+          </details>
 
           ---
 
-          This upgrade was performed automatically by the Telar upgrade workflow.
+          ## After Merging
+
+          Once you've merged the upgrade, please complete the following:
+
           EOF
 
-          # Replace placeholders
-          sed -i "s|\$FROM_VERSION|$FROM_VERSION|g" issue_body.md
-          sed -i "s|\$VERSION|$VERSION|g" issue_body.md
-          sed -i "s|\$BRANCH|$BRANCH|g" issue_body.md
-          sed -i "s|\$COMPARE_URL|https://github.com/$REPO/compare/main...$BRANCH|g" issue_body.md
-          sed -i "s|\$SUMMARY|$SUMMARY|g" issue_body.md
+          # Add manual steps section only if there are manual steps
+          if [ "$MANUAL_STEPS" != "0" ] && [ -n "$MANUAL_STEPS_TEXT" ]; then
+            cat >> issue_body.md << EOF
+          ### Manual Steps
+
+          $MANUAL_STEPS_TEXT
+
+          EOF
+          fi
+
+          # Always add verify section
+          cat >> issue_body.md << EOF
+          ### Verify Your Site
+
+          After the upgrade completes and your site rebuilds:
+
+          1. Visit your live site and navigate through a few pages
+          2. Check for any warning messages or alerts about configuration issues
+          3. If you see any warnings, follow the links or documentation provided to resolve them
+          4. Test key features like story navigation, image viewing, and glossary terms
+
+          ---
+
+          ## What Changed
+
+          <details>
+          <summary><b>View automated changes by category</b> (click to expand)</summary>
+
+          $SUMMARY_CONTENT
+
+          </details>
+
+          ---
+
+          <sub>This upgrade was performed automatically by the Telar upgrade workflow.</sub>
+          EOF
+
+          # Create upgrade label if it doesn't exist
+          gh label create "upgrade" --description "Automated Telar upgrade" --color "0E8A16" 2>/dev/null || true
 
           # Create the issue
           gh issue create \
