--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
-title: History of Kazakh Women
-description: This project tells how kazakh female intellectuals envisioned equality
-  in the early 20th century.
+title: History 
+description: This project tells 
 baseurl: /kazakhwomen
 url: https://happy-ayka.github.io
 author: aigerim
