--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # https://github.com/UCSB-AMPLab/telar
 
 # Site Settings
-title: Kazakh Women’s Voices: A Genealogy of Women’s Literature and Thoughts since the 1970s.
+title: Kazakh Women’s Voices, Genealogy of Women’s Literature and Thoughts since the 1970s.
 description: This project documents women's thoughts on migration, pasture ecology, steppe womenhood, tradition, and identity through their different ways of storytelling.
 
 baseurl: /kazakhwomen
